<resources>
    <string name="app_name">mPOS</string>
    <string name="login">Login</string>
    <string name="user_name">Username</string>
    <string name="pass_word">Password</string>
    <string name="inventory">Inventory</string>
    <string name="hold_bill">Hold bill</string>
    <string name="report">Reports</string>
    <string name="utility">Utility</string>
    <string name="switch_user">Switch user</string>
    <string name="set_member">Set member</string>
    <string name="addnew_member">New member</string>
    <string name="discount">Discount</string>
    <string name="cash">Cash</string>
    <string name="cancel_bill">Cancel bill</string>
    <string name="logout">Logout</string>
    <string name="sub_total">Sub total</string>
    <string name="vat">Vat</string>
    <string name="total_price">Total price</string>
    <string name="title_activity_payment">Payment</string>
    <string name="total_receive">Total receive</string>
    <string name="change">Change</string>
    <string name="item_name">Items</string>
    <string name="price">Price</string>
    <string name="pay_type">Pay type</string>
    <string name="pay_detail">Detail</string>
    <string name="pay_amount">Amount</string>
    <string name="total_payment">Total pay</string>
    <string name="to_be_paid">Payment left</string>
    <string name="item_no">#</string>
    <string name="amount">Amount</string>
    <string name="credit_pay">Credit Card</string>
    <string name="title_activity_credit_pay">Credit card Payment</string>
    <string name="credit_card_no">Credit card NO</string>
    <string name="bank">Bank</string>
    <string name="card_type">Card type</string>
    <string name="expire_date">Expire</string>
    <string name="approval_code">Approval code</string>
    <string name="enter">Enter</string>
    <string name="qty">Qty</string>
    <string name="sale_price">Sale price</string>
    <string name="vat_exclude">VAT exclude</string>
    <string name="information">Information</string>
    <string name="confirm_cancel">Are you sure to cancel?</string>
    <string name="clear_bill">Clear bill</string>
    <string name="confirm_clear_bill">Are you sure you want to clear bill?</string>
    <string name="enter_enough_money">Please enter enough money.</string>
    <string name="close">Close</string>
    <string name="payment">Payment</string>
    <string name="receive_stock">Receive Stock</string>
    <string name="direct_receive_stock">Direct Receive</string>
    <string name="stock_counting">Stock counting</string>
    <string name="count_stock">Count stock</string>
    <string name="stock_movement">Stock Movement</string>
    <string name="stock_card">Stock card</string>
    <string name="sale_report">Sale report</string>
    <string name="sale_report_by_bill">Sale By Bill</string>
    <string name="sale_report_by_product">Sale By Product</string>
    <string name="remark">Remark</string>
    <string name="update_product_data">Update Product</string>
    <string name="update_product_progress">Update product data&#8230;</string>
    <string name="check_device_progress">Checking device please wait...</string>
    <string name="update_shop_progress">Update shop data&#8230;</string>
    <string name="update_menu_progress">Update menu data&#8230;</string>
    <string name="error">Error</string>
    <string name="hold">Hold</string>
    <string name="title_activity_sale_report">Sale Report</string>
    <string name="create_report">Create report</string>
    <string name="code">Code</string>
    <string name="product_name">Product Name</string>
    <string name="unit_price">Unit Price</string>
    <string name="to">To</string>
    <string name="condition">Condition</string>
    <string name="product_group">Product Group &gt;&gt;</string>
    <string name="total_bill">#Bill</string>
    <string name="service_charge_short">SC</string>
    <string name="discount_short">Disc</string>
    <string name="total_sale">Total Sale</string>
    <string name="vatable">VATable</string>
    <string name="total_vat">Total VAT</string>
    <string name="diff">Diff</string>
    <string name="num_row">#</string>
    <string name="staff">Staff</string>
    <string name="open_time">Open time</string>
    <string name="ip_address">IP Address</string>
    <string name="ip_address_summary">IP Address of server</string>
    <string name="web_service">Web Service</string>
    <string name="web_service_summary">Setting webservice name</string>
    <string name="pref_header_connection">Connection</string>
    <string name="title_activity_setting">Settings</string>
    <string name="connection">Connection</string>
    <string name="connection_summary">Setting connection such as IP Address, Webservice</string>
    <string name="incorrect_password">Incorrect password!</string>
    <string name="incorrect_user">Incorrect user!</string>
    <string name="enter_username">Please enter username</string>
    <string name="enter_password">Please enter password</string>
    <string name="update_data">Update Data</string>
    <string name="modify">modify</string>
    <string name="delete">Delete</string>
    <string name="summary">Summary</string>
    <string name="receipt_no">Receipt No.</string>
    <string name="printer_ip">Printer IP</string>
    <string name="printer_name">Printer Name</string>
    <string name="printer_setting">Printer Settings</string>
    <string name="software_info">© 2013 All Rights Reserved. Synature Technology Co., Ltd.\n 
55/165 M.Banklangmuang, Soi Ladprao 88, Ladprao Rd.\n Wangthonglang, Bangkok, Thailand. 10310\n
Tel: +66(0)-2-530-3835-6 Fax: +66(0)-2-530-3092\n E-mail: info@synaturegroup.com</string>
    <string name="promp_card_no">Please enter credit card No.</string>
    <string name="progress">Please wait&#8230;</string>
    <string name="title_activity_inv_direct_receive">Direct Receive</string>
    <string name="action_settings">Settings</string>
    <string name="product_code">Product code</string>
    <string name="product_price">Product price</string>
    <string name="vat_type">VAT type</string>
    <string name="no_vat">No VAT</string>
    <string name="vat_include">VAT included</string>
    <string name="vat_excluded">VAT excluded</string>
    <string name="title_activity_stock_count">Stock Count</string>
    <string name="bill_utility">Bill</string>
    <string name="session_utility">Session</string>
    <string name="void_bill">Void Bill</string>
    <string name="endday">End Day</string>
    <string name="info_cat">Information</string>
    <string name="shop_info">Shop Info</string>
    <string name="close_shift">Close Shift</string>
    <string name="title_activity_void_bill">Void Bill</string>
    <string name="search">Search</string>
    <string name="date_time">Date-Time</string>
    <string name="sale_date">Sale Date</string>
    <string name="paid_time">Paid Time</string>
    <string name="confirm_void_bill">Are you sure you want to void bill?</string>
    <string name="enter_reason">Please enter reason</string>
    <string name="reason">Reason</string>
    <string name="btn_void">Void</string>
    <string name="title_activity_add_member">Add Member</string>
    <string name="member_code">Member Code</string>
    <string name="gender">Gender</string>
    <string name="member_group">Member Group</string>
    <string name="member_name">Member Name</string>
    <string name="member_lastname">Last Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="address_1">Address #1</string>
    <string name="address_2">Address #2</string>
    <string name="city">City</string>
    <string name="province">Province</string>
    <string name="zipcode">Zip Code</string>
    <string name="birth_day">Birth Day</string>
    <string name="phone_no">Phone No</string>
    <string name="email">Email</string>
    <string name="fax_no">Fax No</string>
    <string name="mobile_no">Mobile No</string>
    <string name="title_search_member">Search Member</string>
    <string name="title_add_product">Add Product</string>
    <string name="title_activity_add_product">AddProductActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="confirm">Confirm</string>
    <string name="save">Save</string>
    <string name="balance">Balance</string>
    <string name="unit_name">Unit</string>
    <string name="error_save_stock">an error occurred during save stock material!</string>
    <string name="confirm_stock_count">Are you sure you want to confirm this stockcount?</string>
    <string name="setting">Setting</string>
    <string name="title_activity_stock_card">Stock Card</string>
    <string name="receive">Receive</string>
    <string name="init">Initial</string>
    <string name="sale">Sale</string>
    <string name="variance">Variance</string>
    <string name="endding">Ending</string>
    <string name="title_activity_search_product">Search Product</string>
    <string name="save_success">Save successfully.</string>
    <string name="confirm_success">Confirm successfully.</string>
    <string name="cancel_success">Cancel successfully.</string>
    <string name="confirm_stock_receive">Are you sure you want to confirm?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirm_delete">Are you sure you want to delete selected</string>
    <string name="confirm_delete_item">Are you sure you want to delete this item?</string>
    <string name="hold_order">Please hold current order.</string>
    <string name="enter_price">Please enter product price.</string>
    <string name="open_price">Open price</string>
    <string name="confirm_endday">Are you sure you want to endday?</string>
    <string name="confirm_close_shift">Are you sure you want to close shift?</string>
    <string name="confirm_logout">Are you sure you want to logout?</string>
    <string name="device_not_register">Device not register</string>
    <string name="not_allow_discount_price">Not allow discount more than product price!</string>
    <string name="not_allow_discount">This product is not allow discount!</string>
    <string name="total">Total</string>
    <string name="confirm_cancel_stock_count">Are you sure you want to cancel stock count?</string>
    <string name="title_activity_manage_product">ManageProductActivity</string>
    <string name="general">General</string>
    <string name="manage_product">Manage Product</string>
    <string name="printer_discover">Printer Discover</string>
    <string name="backoffice">Back Office</string>
    <string name="percent">%</string>
    <string name="not_found_item">Not found item.</string>
    <string name="send_sale_data">Send sale data</string>
    <string name="send_sale_data_progress">Sending sale data please wait&#8230;</string>
    <string name="send_sale_data_success">Send sale data successfully.</string>
    <string name="update_data_success">Update data successfully.</string>
    <string name="enter_ipaddress">Please enter IP Address.</string>
    <string name="enter_backoffice">Please enter backoffice name.</string>
    <string name="product_dept">Product Dept.</string>
    <string name="product_dept_code">Dept Code</string>
    <string name="edit">Edit</string>
    <string name="done">Done</string>
    <string name="add">Add</string>
    <string name="add_pro_dept">Add Product Dept.</string>
    <string name="add_product">Add product</string>
    <string name="enter_printer_ip">Please enter printer IP.</string>
    <string name="view_stock">View Stock</string>
    <string name="other_discount">Other Discount</string>
    <string name="bill_no">Bill</string>
    <string name="search_product_hint">Search products</string>
    <string name="server_url">URL</string>
    <string name="printer_port">Printer Port</string>
    <string name="printer_ip_summary">ip address of printer</string>
    <string name="font">Font</string>
</resources>