<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".StockCardActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_grey"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/textView1"
            style="@style/ColumnHeader"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="1dp"
            android:background="@color/grey_light"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/item_no"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView2"
            style="@style/ColumnHeader"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="1dp"
            android:background="@color/grey_light"
            android:lines="1"
            android:padding="4dp"
            android:text="@string/product_code"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView3"
            style="@style/ColumnHeader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@color/grey_light"
            android:lines="1"
            android:padding="4dp"
            android:text="@string/product_name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView10"
            style="@style/ColumnHeader"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/init"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView8"
            style="@style/ColumnHeader"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="1dp"
            android:background="@color/grey_light"
            android:lines="1"
            android:padding="4dp"
            android:text="@string/receive"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView9"
            style="@style/ColumnHeader"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="1dp"
            android:background="@color/grey_light"
            android:padding="4dp"
            android:text="@string/sale"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView7"
            style="@style/ColumnHeader"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="1dp"
            android:background="@color/grey_light"
            android:lines="1"
            android:padding="4dp"
            android:text="@string/endding"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView4"
            style="@style/ColumnHeader"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="1dp"
            android:background="@color/grey_light"
            android:lines="1"
            android:padding="4dp"
            android:text="@string/variance"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView5"
            style="@style/ColumnHeader"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="1dp"
            android:background="@color/grey_light"
            android:lines="1"
            android:padding="4dp"
            android:text="@string/diff"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="@color/grey_light"
            android:lines="1"
            android:padding="4dp"
            android:text="@string/unit_name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:visibility="gone" />
    </LinearLayout>

    <ListView
        android:id="@+id/listView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:background="@color/smoke_white" >

    </ListView>

</LinearLayout>
