<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DirectReceiveActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_grey" >

        <TextView
            android:id="@+id/textView1"
            style="@style/ColumnHeader"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/item_no"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView2"
            style="@style/ColumnHeader"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/product_code"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView3"
            style="@style/ColumnHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/product_name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView4"
            style="@style/ColumnHeader"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/qty"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView5"
            style="@style/ColumnHeader"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView6"
            style="@style/ColumnHeader"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/vat_type"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <ListView
        android:id="@+id/listView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/smoke_white"
        android:choiceMode="multipleChoice"
        android:listSelector="@drawable/list_selector" >

    </ListView>

</LinearLayout>