<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="horizontal" >

    <Button
        android:id="@+id/btnReceive"
        style="@style/ButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/gray_button"
        android:text="@string/receive_stock" />

    <Button
        android:id="@+id/btnCount"
        style="@style/ButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/gray_button"
        android:text="@string/count_stock" />

    <Button
        android:id="@+id/btnStockCard"
        style="@style/ButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/gray_button"
        android:text="@string/stock_card" />

</LinearLayout>